split ui from lib